GNOME Bugzilla – Bug 696622
gtk option printer widget segfault in epiphany
Last modified: 2013-04-15 00:19:56 UTC
Created attachment 239852 [details] [review] disconnect source_changed_handler on printeroptionwidget finalize disconnect source_changed_handler on printeroptionwidget finalize Printing a web page without window.print (which still segfault but is a matter of webkitgtk bugs already reported against 1.11.92), that is Ctrl+P is fixed (does not attempt to execute the source_changed_handler on a printeroptionwidget that has been destroyed) by disconnecting this handler in the printeroptionwidget finalize. Program received signal SIGSEGV, Segmentation fault. 0x00007ffff2e1bd79 in update_widgets (widget=0x18ee2e0) at /home/prahal/Projects/Devel/Gnome/jhbuild/gnome/gtk+/gtk/gtkprinteroptionwidget.c:943 943 source = priv->source; (gdb) bt
+ Trace 231684
Review of attachment 239852 [details] [review]: Looks right in principle, though ::: gtk/gtkprinteroptionwidget.c @@ +157,3 @@ + g_signal_handler_disconnect (priv->source, + priv->source_changed_handler); + } I don't think there's any need to check priv->source_changed_handler here - it is always set when priv->source is not NULL.
Created attachment 241530 [details] [review] disconnect source_changed_handler on printeroptionwidget finalize (v2)